--- a/TMAX/index.html
+++ b/TMAX/index.html
@@ -5,36 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="new.css">
 </head>
 <body>
-    <img src="http/s://lh3.googleusercontent.com/a/AEdFTp6uQTw_l2gTxRXU9EAluLKwCe69HyI_aJyJ8HsMjQ=s450-p-rw-no" alt="my-profile-pic">
-    <h1 class="main-headng"> MR OSAHON</h1>
-    <p> a web developer <strong>@</Strong> TMAX</p>
-    <hr>
-    <h3> work experience</h3>
-    <p>junior web dev @ solic info tech 2009</p>
-    <table>
-        <thead>
-           <td><img src="one.jpg"</td>
-           <td>NAME</td>
-           <td>DEPARTMENT</td>
-        </thead>
-        <tr>
-           <td>001</td>
-           <td>mark</td>
-           <td>Engineering</td> 
-        </tr>
-        <div class="demo">
-            <label for="">firstname</label>
-            <input type="text" placeholder="first">
-            <label for="">lastname</label><br>
-            <label for="">gender</label><br>
-            <label for="">male</label>
-            <input type="checkbox" name="male" id="" >
-            <label>female</label>
-            <input type="" name="female">
-        </div>
-        
-    </table>
+<p id="copyright"></p>
+
+
+<img src="logo.jpg" alt=" logo">
+<img src="logo.jpg" alt=" logo">
+<img src="logo.jpg" alt=" logo">
+
+<form action="" method="get"></form>
+<script>
+    document.getElementById("copyright").innerHTML = "this is the copyright notice";
+    let x = 24;
+    let y = 28;
+    let z = "an output";
+    if (y==29){
+        alert(z);
+    }
+    else 
+    alert("no output");
+    
+   
+</script>
 </body>
 </html>
